[gd_scene load_steps=4 format=3 uid="uid://cs101d0cdwrks"]

[ext_resource type="Script" path="res://scripts/weapons/spas.gd" id="1_h5voo"]
[ext_resource type="PackedScene" uid="uid://wv8k2pcx05t1" path="res://projectiles/player_bullet_shotgun.tscn" id="2_25o5h"]
[ext_resource type="PackedScene" uid="uid://dylxjnvdseh0j" path="res://models/weapons/shotgun.blend" id="2_iawjl"]

[node name="Spas" type="Node3D" node_paths=PackedStringArray("bullet_spawn")]
script = ExtResource("1_h5voo")
projectile = ExtResource("2_25o5h")
bullet_spawn = NodePath("BulletSpawn")
bullet_spread = Vector3(0.04, 0.04, 0)
rpm = 80
buckshot_count = 10
muzzle_light_intensity = 0.5
light_lerp_weight = 0.35
WeaponName = "Shotgun"

[node name="shotgun2" parent="." instance=ExtResource("2_iawjl")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.227732, -0.101722, 0.431855)

[node name="shotgun" parent="shotgun2" index="1"]
cast_shadow = 0

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0.1, 0)

[node name="AudioSources" type="Node3D" parent="."]

[node name="GunShotAudioStreamPlayer" type="AudioStreamPlayer" parent="AudioSources"]
bus = &"Sfx"

[node name="SFXAudioStreamPlayer" type="AudioStreamPlayer" parent="AudioSources"]
bus = &"Sfx"

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="AudioSources"]

[node name="BulletSpawn" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.225646, -0.0441339, 0.996532)

[node name="Muzzle" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.225646, -0.0441339, 0.996532)

[node name="OmniLight3D" type="OmniLight3D" parent="Muzzle"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.0149193)
light_color = Color(0.976471, 0.67451, 0.423529, 1)
light_energy = 0.0
omni_range = 3.0
omni_attenuation = 0.5

[node name="Timers" type="Node" parent="."]

[node name="RateOfFireTimer" type="Timer" parent="Timers"]
process_callback = 0
one_shot = true

[node name="ReloadTimer" type="Timer" parent="Timers"]
process_callback = 0
one_shot = true

[editable path="shotgun2"]
